--- a/Trending Repos/Trending Repos/Base.lproj/Main.storyboard
+++ b/Trending Repos/Trending Repos/Base.lproj/Main.storyboard
@@ -153,8 +153,23 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="BUJ-Ap-dh0"/>
                     </view>
-                    <navigationItem key="navigationItem" id="LZX-DX-fb5"/>
+                    <navigationItem key="navigationItem" id="LZX-DX-fb5">
+                        <nil key="title"/>
+                        <segmentedControl key="titleView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="bar" selectedSegmentIndex="0" id="kTS-hY-ZvM">
+                            <rect key="frame" x="96.5" y="7" width="182" height="30"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <segments>
+                                <segment title="Day"/>
+                                <segment title="Month"/>
+                                <segment title="Year"/>
+                            </segments>
+                            <connections>
+                                <action selector="changeDateFilter:" destination="gsq-Wq-BGX" eventType="valueChanged" id="S1q-lI-Ocg"/>
+                            </connections>
+                        </segmentedControl>
+                    </navigationItem>
                     <connections>
+                        <outlet property="segmentedControl" destination="kTS-hY-ZvM" id="5jo-uc-ukd"/>
                         <outlet property="tabBar" destination="6RX-Oz-Re7" id="Szw-nk-tkx"/>
                         <outlet property="tableView" destination="gd7-s4-QR1" id="y2D-C5-KIQ"/>
                         <segue destination="vC3-pB-5Vb" kind="showDetail" identifier="showDetail" id="HSG-cs-UlT"/>
