--- a/Trending Repos/Trending Repos/Base.lproj/Main.storyboard
+++ b/Trending Repos/Trending Repos/Base.lproj/Main.storyboard
@@ -45,9 +45,14 @@
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="gd7-s4-QR1">
                                 <rect key="frame" x="0.0" y="64" width="375" height="554"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <searchBar key="tableHeaderView" contentMode="redraw" id="dWX-Cv-Nhj">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="56"/>
+                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                    <textInputTraits key="textInputTraits"/>
+                                </searchBar>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="repositoryCell" rowHeight="103" id="cmP-T8-5DO" customClass="RepositoryTableViewCell" customModule="Trending_Repos" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="103"/>
+                                        <rect key="frame" x="0.0" y="84" width="375" height="103"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="cmP-T8-5DO" id="JWU-Wi-HsZ">
                                             <rect key="frame" x="0.0" y="0.0" width="342" height="102.5"/>
@@ -169,6 +174,7 @@
                         </segmentedControl>
                     </navigationItem>
                     <connections>
+                        <outlet property="searchBar" destination="dWX-Cv-Nhj" id="AGu-Zc-0A3"/>
                         <outlet property="segmentedControl" destination="kTS-hY-ZvM" id="5jo-uc-ukd"/>
                         <outlet property="tabBar" destination="6RX-Oz-Re7" id="Szw-nk-tkx"/>
                         <outlet property="tableView" destination="gd7-s4-QR1" id="y2D-C5-KIQ"/>
