--- a/Trending Repos/Trending Repos/Base.lproj/Main.storyboard
+++ b/Trending Repos/Trending Repos/Base.lproj/Main.storyboard
@@ -110,7 +110,7 @@
                                                             </constraints>
                                                             <state key="normal" title="Fav"/>
                                                             <connections>
-                                                                <action selector="favorite:" destination="cmP-T8-5DO" eventType="touchUpInside" id="nSP-5O-bFW"/>
+                                                                <action selector="favorite:" destination="cmP-T8-5DO" eventType="touchUpInside" id="GZR-BJ-wA8"/>
                                                             </connections>
                                                         </button>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="abd-6c-aW8">
